--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <div class="image">
       <div class="accent">
       </div>
-      <img src="/images/image-header-desktop.jpg" alt="" srcset="">
+      <img id="image" src="/images/image-header-desktop.jpg" alt="" srcset="">
     </div>
   </div>
 
-
+<script src="script/script.js"></script>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/danielvito-pereira" target="_blank">Daniel Vitor Pereira da Silva</a>.
