--- a/index.html
+++ b/index.html
@@ -7,41 +7,42 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="stylesheet" href="css/style.css">
-  
+  <link rel="stylesheet" href="./css/assets/reset.css">
+  <link rel="stylesheet" href="./css/assets/wapper.css">
+  <link rel="stylesheet" href="./css/assets/content.css">
+  <link rel="stylesheet" href="./css/assets/sta.css">
+  <link rel="stylesheet" href="./css/assets/image.css">
+  <link rel="stylesheet" href="./css/assets/mediaQuery/mediaQuery.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
 </head>
 <body>
-
   <div id="man-wapper">
+    <div class="image">
+      <img id="image" src="/images/image-header-desktop.jpg" alt="" srcset="">
+    </div>
     <div class="content">
       <h1>Get <span style="color: hsl(277, 64%, 61%);">insights</span> that help your business grow.</h1>
       
       <p class="text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
       <section class="sta">
-        <div>
-          <h1>10k+</h1> <p>companies</p>
+        <div class="item">
+          <h1>10k+</h1> <p class="text">companies</p>
         </div>
-        <div>
-          <h1>314</h1> <p>templates</p>
+        <div class="item">
+          <h1>314</h1> <p class="text">templates</p>
 
         </div>
-        <div>
-          <h1>12m+</h1> <p>queries</p>
+        <div class="item">
+          <h1>12M+</h1> <p class="text">queries</p>
         </div>
         
 
       </section>
     </div>
-    <div class="image">
-      <div class="accent">
-      </div>
-      <img id="image" src="/images/image-header-desktop.jpg" alt="" srcset="">
-    </div>
   </div>
-
-<script src="script/script.js"></script>
+<script src="./script/script.js"></script>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/danielvito-pereira" target="_blank">Daniel Vitor Pereira da Silva</a>.
