--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img id="image" src="/images/image-header-desktop.jpg" alt="" srcset="">
     </div>
     <div class="content">
-      <h1>Get <span style="color: hsl(277, 64%, 61%);">insights</span> that help your business grow.</h1>
+      <h1 class="principal">Get <span style="color: hsl(277, 64%, 61%);">insights</span> that help your business grow.</h1>
       
       <p class="text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
